fixed extra margin arround the page by editing index.css

--- a/src/components/Header/HeaderComponentStyles.scss
+++ b/src/components/Header/HeaderComponentStyles.scss
@@ -1,7 +1,6 @@
 .header {
     background-color: #222;
     color: #fff;
-    padding: 1rem;
 }
 
 .nav-bar {
@@ -29,7 +28,6 @@
 }
 
 .nav-item {
-
     margin-right: 1.5rem;
 }
 
